add HAL audit and related process